# trbase

./: README.md  make.sh  pyproject.toml  requirements.txt
release/: trbase-0.1.0-py3-none-any.whl
src/trbase/: __init__.py
src/trbase/helper/: classbuilder.py  stringutils.py
src/trbase/pyqtwidgets/: helper.py  trqwidget.py
src/trbase/pyqtwidgets/checkboxgroup/: checkboxgroup.py
src/trbase/pyqtwidgets/configwidget/: configwidget.py  configwidgetitem.py  templates.py
src/trbase/pyqtwidgets/dataclasseditwidget/: dataclasseditwidget.py  example.py
src/trbase/pyqtwidgets/editlistwidget/: editlistwidget.py
src/trbase/pyqtwidgets/edittablewidget/: edittablewidget.py
src/trbase/pyqtwidgets/templates/exampletree/: config.pkl  exampletree.py  makegui.sh  ui_exampletree.py  ui_exampletree.ui
src/trbase/pyqtwidgets/templates/exampletree/items/: customer.py  department.py  project.py  team.py  vehicle.py
src/trbase/pyqtwidgets/templates/standalonewidget/: makegui.sh  ui_widget_template.py  ui_widget_template.ui  widgettemplate.py
src/trbase/pyqtwidgets/tree/: trbasetreeview.py  trtreemodel.py
src/trbase/pyqtwidgets/tree/itemtree/: example.py  itemtree.py  trtreeitemwidget.sqlite
src/trbase/pyqtwidgets/tree/itemtree/template/: makegui.sh  template.sqlite  templateapp.py  ui_templateapp.py  ui_templateapp.ui
src/trbase/pyqtwidgets/tree/structuredtree/: trstructuretreeview.py
src/trbase/std/: trdataclass.py  trlogfile.py  trobject.py  trtable.py
tests/: runtests.sh  test_trdataclass.py  test_trtable.py
