[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "trbase"
version = "0.1.0"
authors = [
  { name="Tino Remus", email="tino.remus@email.com" },
]
description = "Base functions for all other packages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
